# ProtPen

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
protpen/: cli_consolidate_foldseek.py  cli_download.py  cli_eggnog.py  cli_enrich.py  cli_foldseek.py  cli_merge.py  downloader.py  eggnog.py  enrich_utils.py  foldseek.py  foldseek_utils.py  merge_utils.py
sample_search/: run_eggnog_mapper.sh  sample_run_pipeline.sh
tests/: test_downloader.py  test_eggnog.py  test_enrich_utils.py  test_foldseek.py  test_foldseek_utils.py  test_merge_utils.py
