[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protpen"
version = "1.0.0"
description = "ProtPen: Protein function prediction pipeline using sequence and structure-based tools"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Diya Mathai" },
    { name = "Stefan Schulze", email = "stefan.schulze@rit.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pandas",
    "biopython",
    "psutil>=6.0",
]

[project.optional-dependencies]
test = ["pytest", "black"]

[project.urls]
Repository = "https://github.com/ProtPen/ProtPen"

[tool.hatch.build.targets.wheel]
packages = ["protpen"]

[tool.black]
target-version = ["py310"]
